<resources>
    <string name="app_name">Find your way</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="show_waypoint_list">Show Waypoint List</string>
    <string name="logout">Logout</string>
    <string name="title_activity_bottom_navigarion">BottomNavigarionActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="show_me_routes">Show my routes</string>
    <string name="edit_prodile">Edit Prodile</string>
    <string name="your_email_address">Your email address</string>
    <string name="your_name">Your Name</string>
    <string name="return_to_main">Return to main</string>
    <string name="lat">Latitude:</string>
    <string name="lon">Longitude:</string>
    <string name="_0_00">0.00</string>
    <string name="altitude">Altitude:</string>
    <string name="accuracy">Accuracy:</string>
    <string name="speed">Speed:</string>
    <string name="sensor">Sensor:</string>
    <string name="cell_tower_wifi">Cell Tower + Wifi</string>
    <string name="updates">Updates:</string>
    <string name="off">Off</string>
    <string name="location_updates">Location Updates</string>
    <string name="savepower_gps">SavePower/GPS</string>
    <string name="address">Address:</string>
    <string name="waypoints">Way Points</string>
    <string name="new_waypoint">New WayPoint</string>
    <string name="show_map">Show Map</string>
    <string name="profile_page">Profile Page</string>
    <string name="stop_and_save_trip">Stop and Save Trip</string>
    <string name="sign_out">Sign out</string>
    <string name="your_profile">Your Profile</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_sign_up_login">Already sign Up ? Login</string>
    <string name="nickname">Nickname</string>
    <string name="email">Email</string>
    <string name="explore">Explore</string>
    <string name="set_profile_picture">Set Profile Picture</string>
    <string name="edit_your_interests">Edit your interests</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name: </string>
    <string name="start_date">Start Date:</string>
    <string name="duration">Duration:</string>
    <string name="distance">Distance:</string>
    <string name="empty" />
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="login">Login</string>
    <string name="not_yet_register_sign_up">Not yet register? Sign Up</string>
    <string name="image">Image</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="clear_way_points">Clear Way Points</string>
    <string name="want_to_delete_this_route">Do you want to delete this route?</string>
    <string name="hide">Hide</string>
    <string name="no_info">No information</string>
    <string name="set_your_age">Set your age</string>
    <string name="change_nickname">Change Nickname</string>
</resources>