<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:textSize="16sp"
tools:context=".MainActivity"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:background="@drawable/background_main">

<View
    android:id="@+id/backgroundTestView"
    android:layout_width="374dp"
    android:layout_height="191dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="8dp"
    android:alpha="0.8"
    android:background="@drawable/rounded_background"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/tv_labellat"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="16dp"
    android:text="@string/lat"
    android:textSize="16sp"
    app:layout_constraintStart_toStartOf="@+id/backgroundTestView"
    app:layout_constraintTop_toTopOf="@+id/backgroundTestView" />

<TextView
    android:id="@+id/tv_lat"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="6dp"
    android:layout_marginTop="16dp"
    android:text="@string/_0_00"
    android:textSize="16sp"
    app:layout_constraintStart_toEndOf="@+id/tv_labellat"
    app:layout_constraintTop_toTopOf="@+id/backgroundTestView" />

<TextView
    android:id="@+id/tv_labellon"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:text="@string/lon"
    android:textSize="16sp"
    app:layout_constraintStart_toStartOf="@+id/backgroundTestView"
    app:layout_constraintTop_toBottomOf="@+id/tv_labellat" />

<TextView
    android:id="@+id/tv_lon"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="6dp"
    android:layout_marginTop="8dp"
    android:text="@string/_0_00"
    android:textSize="16sp"
    app:layout_constraintStart_toEndOf="@+id/tv_labellon"
    app:layout_constraintTop_toBottomOf="@+id/tv_lat" />

<TextView
    android:id="@+id/tv_labelaltitude"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:text="@string/altitude"
    android:textSize="16sp"
    app:layout_constraintStart_toStartOf="@+id/backgroundTestView"
    app:layout_constraintTop_toBottomOf="@+id/tv_labellon" />

<TextView
    android:id="@+id/tv_altitude"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="6dp"
    android:layout_marginTop="8dp"
    android:text="@string/_0_00"
    android:textSize="16sp"
    app:layout_constraintStart_toEndOf="@+id/tv_labelaltitude"
    app:layout_constraintTop_toBottomOf="@+id/tv_lon" />

<TextView
    android:id="@+id/tv_lbladdress"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:text="@string/address"
    android:textSize="16sp"
    app:layout_constraintStart_toStartOf="@+id/backgroundTestView"
    app:layout_constraintTop_toBottomOf="@+id/tv_labelaltitude" />
<TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tv_lbladdress"
        app:layout_constraintTop_toTopOf="@+id/tv_lbladdress" />
<TextView
    android:id="@+id/address_line"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="6dp"
    android:layout_marginTop="8dp"
    android:scrollHorizontally="true"
    android:text=""
    app:layout_constraintEnd_toEndOf="@+id/backgroundTestView"
    app:layout_constraintStart_toEndOf="@+id/tv_lbladdress"
    app:layout_constraintTop_toBottomOf="@+id/tv_altitude" />

<View
    android:id="@+id/backgroundTestView2"
    android:layout_width="374dp"
    android:layout_height="191dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="24dp"
    android:layout_marginEnd="8dp"
    android:alpha="0.8"
    android:background="@drawable/rounded_background"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.38"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/backgroundTestView" />

<TextView
    android:id="@+id/tv_labelsensor"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="16dp"
    android:text="@string/sensor"
    android:textSize="16sp"
    app:layout_constraintStart_toStartOf="@+id/backgroundTestView2"
    app:layout_constraintTop_toTopOf="@+id/backgroundTestView2" />

<androidx.appcompat.widget.SwitchCompat
    android:id="@+id/sw_gps"
    android:layout_width="177dp"
    android:layout_height="48dp"
    android:layout_marginTop="4dp"
    android:text="@string/savepower_gps"
    android:textSize="14sp"
    app:layout_constraintEnd_toEndOf="@+id/backgroundTestView2"
    app:layout_constraintHorizontal_bias="0.029"
    app:layout_constraintStart_toEndOf="@+id/tv_labelsensor"
    app:layout_constraintTop_toTopOf="@+id/backgroundTestView2" />

<androidx.appcompat.widget.SwitchCompat
    android:id="@+id/sw_locationsupdates"
    android:layout_width="177dp"
    android:layout_height="48dp"
    android:layout_marginTop="4dp"
    android:checked="false"
    android:text="@string/location_updates"
    app:layout_constraintEnd_toEndOf="@+id/backgroundTestView2"
    app:layout_constraintHorizontal_bias="0.563"
    app:layout_constraintStart_toStartOf="@+id/backgroundTestView2"
    app:layout_constraintTop_toBottomOf="@+id/sw_gps"
    app:switchPadding="5dp" />

<TextView
    android:id="@+id/tv_updates"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginTop="64dp"
    android:text="@string/off"
    android:textSize="16sp"
    app:layout_constraintEnd_toEndOf="@+id/backgroundTestView2"
    app:layout_constraintHorizontal_bias="0.23"
    app:layout_constraintStart_toEndOf="@+id/sw_locationsupdates"
    app:layout_constraintTop_toTopOf="@+id/backgroundTestView2" />

<TextView
    android:id="@+id/textView"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:text="@string/waypoints"
    android:textSize="16sp"
    app:layout_constraintStart_toStartOf="@+id/backgroundTestView2"
    app:layout_constraintTop_toBottomOf="@+id/sw_locationsupdates" />

<TextView
    android:id="@+id/tv_countOfCrumbs"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    android:layout_marginTop="4dp"
    android:text="@string/_0_00"
    android:textSize="16sp"
    app:layout_constraintStart_toEndOf="@+id/textView"
    app:layout_constraintTop_toBottomOf="@+id/sw_locationsupdates" />


    <View
        android:id="@+id/buttonViewMain"
        android:layout_width="378dp"
        android:layout_height="224dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:alpha="0.1"
        android:background="@drawable/rounded_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backgroundTestView2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/buttonViewMain"
        app:layout_constraintStart_toStartOf="@+id/buttonViewMain"
        app:layout_constraintTop_toTopOf="@+id/buttonViewMain">


        <Button
            android:id="@+id/btn_showMap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="4dp"
            android:alpha="0.9"
            android:background="@drawable/custom_button_background"
            android:text="@string/show_map"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_showProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:alpha="0.9"
            android:background="@drawable/custom_button_background"
            android:text="@string/profile_page"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_stop_and_save_trip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"

            android:layout_marginEnd="16dp"
            android:alpha="0.9"
            android:background="@drawable/custom_button_background"
            android:text="@string/stop_and_save_trip"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_showWayPointList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:alpha="0.9"
        android:background="@drawable/custom_button_background"
        android:text="@string/show_waypoint_list"
        app:layout_constraintEnd_toEndOf="@+id/buttonViewMain"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/buttonViewMain"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/btn_shared_routes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:alpha="0.9"
        android:background="@drawable/custom_button_background"
        android:text="Explore routes"
        app:layout_constraintBottom_toBottomOf="@+id/buttonViewMain"
        app:layout_constraintEnd_toEndOf="@+id/buttonViewMain"
        app:layout_constraintHorizontal_bias="0.005"
        app:layout_constraintStart_toStartOf="@+id/buttonViewMain"
        app:layout_constraintTop_toBottomOf="@+id/btn_showWayPointList" />

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="104dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:alpha="0.7"
        android:background="@drawable/custom_button_background"
        android:text="@string/clear_way_points"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundTestView2"
        app:layout_constraintStart_toStartOf="@+id/backgroundTestView2"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.166" />


</androidx.constraintlayout.widget.ConstraintLayout>